Feature: update, delete, search, sort for test result
