# laboratory-management-backend/services/testOrderService/src/routes/testResult.routes.ts
@@ -2,15 +2,24 @@
 import express from "express";
 import {
   getTestOrdersWithResultsSummary,
-  getTestOrderById
+  getTestOrderById,
+  deleteTestResult,
+  updateTestResult,
+  searchTestResultsPaginated
 } from "../controllers/testResult.controller.js";
 
 const router = express.Router();
 
-// Lấy danh sách test orders (phân trang)
+
 router.get("/all", getTestOrdersWithResultsSummary);
 
+router.get("/search", searchTestResultsPaginated);
+
 router.get("/getById/:id", getTestOrderById);
+
+router.put("/update/:id", updateTestResult);
+
+router.delete("/delete/:id", deleteTestResult);
 
 
 export default router;
